# emissions

./: .gitignore  .gitmodules  CMakeLists.txt
.github/workflows/: cmake-multi-platform.yml
data/shaders/: MainCompute.glsl
src/: Application.cpp  Application.hpp  EmitterInfo.cpp  EmitterInfo.hpp  ImGUIContext.cpp  ImGUIContext.hpp  PCH.hpp  SimulationConfig.cpp  SimulationConfig.hpp  SimulationController.cpp  SimulationController.hpp  StringHash.hpp  Window.cpp  Window.hpp  main.cpp
src/OpenGL/: Buffer.cpp  Buffer.hpp  Framebuffer.cpp  Framebuffer.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp
